--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6119,6 +6119,33 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 
 
+-------------------------------------------------------------------
+6.00.20:
+
+-BUG FIX: Alphavantage Stock prices API default parameters upgraded to function smoothly for the free level
+
+-BUG FIX: Desktop Edition support has been fixed
+
+-BUG FIX: Miscellaneous fixes
+
+-Many fixes / improvements to the new sidebar navigation / main content areas
+
+-Removed HotBit market support (they shut down)
+
+-Miscellaneous user experience improvements
+
+-Code refactoring / cleanup / housekeeping
+
+-Additions to 'Other Resources' page
+
+-v6.00.16 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.15 OR LOWER.
+
+-v6.00.8 AND HIGHER MIGRATES / UPGRADES ANY SET COOKIE DATA TO A MORE SECURE / RELIABLE FORMAT, ONE-TIME DURING UPGRADES FROM V6.00.7 OR LOWER.
+
+-------------------------------------------------------------------
+
+
+
 
 
 
