--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6199,6 +6199,17 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 
 
+-------------------------------------------------------------------
+6.00.24:
+
+-BUG FIX: Miscellaneous fixes
+
+-Miscellaneous user experience improvements
+
+-------------------------------------------------------------------
+
+
+
 
 
 
