--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6212,6 +6212,8 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -Miscellaneous user experience improvements
 
+-More reliable page zooming / resizing
+
 -Added Bitcoin NFT tracking support
 
 -------------------------------------------------------------------
