--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6199,6 +6199,27 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 
 
+-------------------------------------------------------------------
+6.00.24:
+
+-BUG FIX: Miscellaneous fixes
+
+-Auto-pruning of bitcoin (primary) currency / (secondary) crypto pairing markets user configs, IF markets don't exist in assets config
+
+-Added more fiat currency markets (to offset localbitcoins shutting down)
+
+-Removed localbitcoins support (they went out of business)
+
+-Miscellaneous user experience improvements
+
+-More reliable page zooming / resizing
+
+-Added Bitcoin NFT tracking support
+
+-------------------------------------------------------------------
+
+
+
 
 
 
